# featherlabs

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/web/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
apps/web/components/: ConnectWallet.tsx  Footer.tsx  Logo.tsx  NFTCard.tsx  Navbar.tsx
apps/web/src/Components/: Logo.tsx  Navbar.tsx
apps/web/src/app/: globals.css  layout.tsx  page.tsx  provider.tsx
apps/web/src/app/create-collection-nft/: page.tsx
apps/web/src/app/view-nft/: page.tsx
apps/web/src/components/ui/: button.tsx  checkbox.tsx  input.tsx  textarea.tsx
apps/web/src/utils/: nftUtils.ts
clients/js/: package.json  pnpm-lock.yaml  tsconfig.json
clients/js/src/: constants.ts  index.ts  program.ts
clients/js/src/actions/: create-asset.ts  create-group.ts  index.ts
clients/js/src/core/: asset.ts  create-asset.ts  create-group.ts  group.ts  index.ts  royalty.ts
clients/js/src/idl/: feather_assets.ts  index.ts
clients/js/src/nft/: collection.ts  index.ts  nft.ts  royalty.ts
clients/js/src/types/: args.ts  index.ts  schema.ts  utils.ts  variants.ts
clients/rust/: Cargo.toml
programs/feather_assets/: Cargo.toml
programs/feather_assets/src/: constants.rs  error.rs  lib.rs
programs/feather_assets/src/instructions/: initialize.rs
programs/feather_assets/src/processor/: create_group.rs  mod.rs  update_group_max_size.rs
programs/feather_assets/src/processor/asset/: add_metadata_asset.rs  add_royalties_asset.rs  create_asset.rs  create_member_asset.rs  mod.rs  transfer.rs
programs/feather_assets/src/processor/group/: add_metadata_group.rs  create_group.rs  mod.rs  transfer_group_authority.rs  update_group_max_size.rs  update_group_metadata.rs
programs/feather_assets/src/state/: asset.rs  asset_data.rs  asset_multisig.rs  asset_royalties.rs  group.rs  group_data.rs  mod.rs
programs/feather_assets/tests/: setup.rs  test.rs
tests/: feather_assets.ts
