[workspace]
members = ["clients/rust", "programs/*"]
resolver = "2"
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = { version = "0.29.0", features = ["event-cpi"] }
light-hasher = { version = "1.1.0", features = ["solana"] }
light-sdk = { version = "0.10.0" }
light-utils = { version = "1.1.0" }
spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
solana-sdk = "=1.18.22"

light-client = { version = "0.9.1" }
light-test-utils = { version = "1.2.1" }
solana-program-test = "=1.18.22"
tokio = "1.36.0"
