[package]
name = "feather_assets"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "feather_assets"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["idl-build"]
test-sbf = []
bench-sbf = []
idl-build = ["anchor-lang/idl-build", "light-sdk/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["event-cpi"] }
light-hasher = { workspace = true, features = ["solana"] }
light-sdk = { workspace = true }
light-utils = { workspace = true }
spl-noop = { workspace = true, features = ["no-entrypoint"] }
light-heap = { version = "1.0.0", optional = true }

[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = { workspace = true }

[dev-dependencies]
solana-program-test = { workspace = true }
tokio = { workspace = true }
light-client = { workspace = true }
light-test-utils = { workspace = true }
